--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.23.0",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
